<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    tools:context="com.mapps.mapps.Section2Activity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#d6d6d6"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_grad"
            android:layoutDirection="rtl"
            android:orientation="vertical">

            <TextView
                android:id="@+id/app_header"
                style="@style/myheading"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/lbl_hhhead"
                style="@style/txtquestion"
                android:text="@string/baseline_s2q1" />

            <TextView
                android:id="@+id/lbl_s4q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/lbl_hhhead_count"
                style="@style/txtquestion"
                android:layoutDirection="ltr"
                android:text="" />

            <TextView
                android:id="@+id/lbl_s3q"
                style="@style/txtquestion"
                android:text="@string/baseline_s4q28a" />

            <TextView
                android:id="@+id/lbl_s4q28a"
                style="@style/txtquestion"
                android:text="" />

            <TextView
                android:id="@+id/lbl_s4q28c"
                style="@style/txtquestion"
                android:text="@string/baseline_s4q28c"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RadioGroup
                android:id="@+id/radio_s4q28c"
                style="@style/txtquestion">

                <RadioButton
                    android:id="@+id/RDO_s4q28c_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28c_1" />

                <RadioButton
                    android:id="@+id/RDO_s4q28c_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28c_2" />

            </RadioGroup>

            <TextView
                android:id="@+id/lbl_s4q28d"
                style="@style/txtquestion"
                android:text="@string/baseline_s4q28d" />

            <RadioGroup
                android:id="@+id/radio_s4q28d"
                style="@style/txtquestion">

                <RadioButton
                    android:id="@+id/RDO_s4q28d_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28d_1" />

                <RadioButton
                    android:id="@+id/RDO_s4q28d_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28d_2" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/vu_s4q28oth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/lbl_s4q28oth"
                    style="@style/txtquestion"
                    android:text="@string/baseline_s4q28oth" />

                <EditText
                    android:id="@+id/s4q28oth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_s4q28e"
                style="@style/txtquestion"
                android:text="@string/baseline_s4q28e" />

            <RadioGroup
                android:id="@+id/radio_s4q28e"
                style="@style/txtquestion">

                <RadioButton
                    android:id="@+id/RDO_s4q28e_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28e_1" />

                <RadioButton
                    android:id="@+id/RDO_s4q28e_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28e_2" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/vu_s4q28e1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/lbl_s3q28f1"
                    style="@style/txtquestion"
                    android:text="@string/baseline_s4q28f1" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_1" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_2" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_3" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_4" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_5" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_6" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_7" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_8" />

                <CheckBox
                    android:id="@+id/chk_s3q28f_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baseline_s4q28f_9" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vu_s4q28g"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/lbl_s4q28g"
                    style="@style/txtquestion"
                    android:text="@string/baseline_s4q28g" />

                <RadioGroup
                    android:id="@+id/radio_s4q28g"
                    style="@style/txtquestion">

                    <RadioButton
                        android:id="@+id/RDO_s4q28g_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s4q28g_1" />

                    <RadioButton
                        android:id="@+id/RDO_s4q28g_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s4q28g_2" />

                    <RadioButton
                        android:id="@+id/RDO_s4q28g_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s4q28g_9" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vu_s1q14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/lbl_s1q14"
                    style="@style/txtquestion"
                    android:text="@string/baseline_s1q14" />

                <RadioGroup
                    android:id="@+id/radio_s1q14"
                    style="@style/txtquestion">

                    <RadioButton
                        android:id="@+id/RDO_s1q14_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s1q14_1" />

                    <RadioButton
                        android:id="@+id/RDO_s1q14_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s1q14_2" />

                    <RadioButton
                        android:id="@+id/RDO_s1q14_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s1q14_3" />

                    <RadioButton
                        android:id="@+id/RDO_s1q14_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s1q14_4" />

                    <RadioButton
                        android:id="@+id/RDO_s1q14_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s1q14_5" />

                    <RadioButton
                        android:id="@+id/RDO_s1q14_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/baseline_s1q14_6" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btnnext"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="AddMember"
                android:text="@string/btnAdd" />

            <Button
                android:id="@+id/btnsavedata"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="SaveData"
                android:text="@string/savedata" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>