<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    tools:context="com.mapps.mapps.MainPageActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#d6d6d6"
        android:scrollbars="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_grad"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.mapps.mapps.MainPageActivity">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnOpenForm"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenForm"
                android:text="@string/btnOpenForm" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnSyncData"
                    style="@style/btn"
                    android:layout_marginTop="20dp"
                    android:onClick="syncData"
                    android:text="@string/btnSyncData1" />

                <Button
                    android:id="@+id/btnSyncData2"
                    style="@style/btn"
                    android:layout_marginTop="20dp"
                    android:onClick="syncData2"
                    android:text="@string/btnSyncData2" />

                <Button
                    android:id="@+id/btnSyncData4"
                    style="@style/btn"
                    android:layout_marginTop="20dp"
                    android:onClick="syncData4"
                    android:text="@string/btnSyncData4" />

            </LinearLayout>

            <Button
                android:id="@+id/btnGetHF"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenGetHF"
                android:text="@string/btnGetHF" />

            <LinearLayout
                android:id="@+id/vu_opendb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <Button
                    android:id="@+id/btnDBAccess"
                    style="@style/btn"
                    android:layout_marginTop="20dp"
                    android:onClick="OpenDBAccess"
                    android:text="@string/btnDBAccess" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogout"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="Logout"
                android:text="@string/btnLogout" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>