<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    tools:context="com.mapps.mapps.GetHFList">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#d6d6d6"
        android:scrollbars="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_grad"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.mapps.mapps.GetHFList">

            <TextView
                android:id="@+id/lblurl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/urlusers" />

            <EditText
                android:id="@+id/txturl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="30"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnGetHF"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="getHF"
                android:text="@string/btnGetHF1" />

            <TextView
                android:id="@+id/lblurllhw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/urlusers" />

            <EditText
                android:id="@+id/txturllhw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="30"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnGetlhw"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="getLHW"
                android:text="@string/btnGetLHW" />

            <TextView
                android:id="@+id/lblurl_users"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:text="@string/urlusers" />

            <EditText
                android:id="@+id/txturl_users"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="30"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnGetUsers"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="getUsers"
                android:text="@string/btnGetUsers" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>